# baseServer

./: .dockerignore  .env.example  .geminiignore  .gitignore  AGENTS.md  CLAUDE_CONNECTION_GUIDE.md  CONNECTION_INFO.txt  README.md  STORY_1.5_SUMMARY.md  TROUBLESHOOTING_LOG.md  TROUBLESHOOTING_LOG20251130.md  cloudflare-tunnel.yml.example  inspect_fastmcp.py  mcp-test.ps1  mcp_oauth_flow.ps1  mcp_oauth_flow.sh  mcp_test_suite.sh  mcp_test_suite_modified.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_mcp_endpoints.py  test_mcp_endpoints.sh  test_mcp_flow.sh  test_mcp_proper.py  test_sse_flow.py  videotranscript.txt
docs/: IMPLEMENTATION_READINESS.md  architecture.md  brief.md  bugs.md  debugging_summary.md  how-to-add-tools.md  oauth-test-refactoring-plan.md  prd.md  youtube_curl_commands.md
docs/architecture/: change-log.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  mcp-server-api-specification.md  next-steps.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: checklist-results-report.md  epic-1-local-mcp-server-remote-access-validation.md  epic-2-production-hardening-kubernetes-deployment.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md
docs/stories/: 1.1.story.md  1.2.ToolRegistryAndPluginSystem.md  1.3.story.md  1.4.story.md  1.5.story.md  1.6 ticket.md  1.6.story.md  2.1.1.story.md  2.1.story.md  story_configurable_oauth.md
scripts/windows/: containerize.ps1
src/: __init__.py  __main__.py  config.py  mcp_server.py  mcp_server_story15.py.bak  minimal_mcp_server.py  server.py
src/adapters/: __init__.py  claude_adapter.py
src/handlers/: health.py  jsonrpc_mcp.py  oauth_discovery.py
src/middleware/: __init__.py  oauth.py
src/models/: __init__.py  auth.py  errors.py  mcp.py  youtube.py
src/registry/: tool_registry.py
src/tools/: base.py  hello_world_tool.py  youtube_tool.py
src/utils/: context.py  logging.py
tests/: claude_connector_emulator.py  conftest.py
tests/diagnostics/: check_client.py  check_issuer.py
tests/e2e/: test_real_oauth_flow.py
tests/integration/: test_authorization_code_flow.py  test_mcp_protocol.py  test_mcp_protocolOLD.py  test_mcp_protocol_phoenix.py  test_oauth_flow.py  test_real_oauth_flow.py  test_youtube_api.py
tests/unit/: test_base_tool.py  test_config.py  test_health_handler.py  test_hello_world_tool.py  (+7 more)
(+9 files in other folders)
